--- a/Week4/Activity5/ReadMe
+++ b/Week4/Activity5/ReadMe
@@ -1,41 +1,103 @@
-# Clinic Management System
+📌 Project Name
 
-## Overview
-A Python OOP project using SQLite3/Mysql to manage a clinic's patients, doctors, and appointments.  
-- Generic repository pattern inspired by MyBatis
-- Soft delete via `is_deleted`
-- Audit fields: `create_time`, `modify_time`
-- Transactions supported
-- Queries:
-  1. List senior patients (age > 65)
-  2. Count ophthalmology doctors
+Clinic Database OOP + Generic ORM-Like Python CRUD Framework
 
-## Project Structure
-clinic-system/
-├── DB/
-├── Entities/
-├── Repositories/
-├── init.sql
-├── Example.py
-└── README.md
+📍 Core Objective
 
-## Setup
-1. Install Python 3.10
-2. Run `init.sql` to create tables
-3. Run `Example.py` for example usage
+Develop a general-purpose Python database access layer that:
 
-## Features
-- Highly abstracted database access
-- Generic repository with transaction support
-- Soft deletion
-- Audit fields management
-- Clean separation of concerns
+Supports multiple databases: SQLite & MySQL
 
-## Usage Example
-```python
-db = Database("clinic.db")
-patient_repo = PatientRepository(db)
-seniors = patient_repo.get_seniors()
-for p in seniors:
-    print(p.full_name,p.birth_date)
-db.close()
+Uses OOP design for data access abstraction
+
+Implements a MyBatis-inspired layered architecture
+
+Provides entity models, generic repositories, transaction, and logging support
+
+Demonstrates CRUD operations and business queries on clinic data
+
+🛠 Key Technologies and Architecture
+⭐ 1. Python Standard Library
+
+sqlite3 for SQLite local database operations
+
+datetime for audit fields (create_time, modify_time)
+
+typing for generic type support: Generic, TypeVar, Type
+
+🧱 2. Database Abstraction Layer
+
+Implemented a unified DBEngine abstract base class:
+
+SQLiteEngine: using sqlite3
+
+MySQLEngine: using third-party module pymysql
+
+Standardized interface for: execute, fetch, executescript, commit, rollback, close
+
+All SQL queries are parameterized to prevent SQL injection
+
+Pluggable DB engines improve cross-database compatibility and maintainability
+
+🧠 3. Generic Repository Design (Generic + OOP)
+
+Implemented Repository[T] using Python generics:
+
+Supports any BaseEntity subclass
+
+Automatically adapts SQL placeholders (? for SQLite, %s for MySQL)
+
+Encapsulates common CRUD operations:
+
+insert, select, select_by_id
+
+update_by_id, soft_delete, hard_delete
+
+Supports pagination and LIKE queries
+
+Recognizes primary key fields, auto-handles audit fields, and soft delete flags
+
+This design follows the Repository and MyBatis-style layered pattern.
+
+🧾 4. ORM-Like Entity Mapping
+
+Entity classes inherit a base class:
+
+Includes audit fields: create_time, modify_time, is_deleted
+
+Can declare primary key and field lists
+
+Can easily convert objects to SQL field dictionaries
+
+Repository layer maps objects to SQL parameters automatically
+
+🔍 5. SQL Logging with AOP
+
+Implemented debug_sql decorator:
+
+Automatically prints generated SQL for every execution
+
+Formats parameters in color for clarity
+
+Displays execution time for monitoring
+
+Similar to Java/MyBatis SQL interceptors
+
+🧪 6. Core Business Implementation
+
+Clinic scenario examples:
+
+List all patients over 65 years old
+
+Count doctors specialized in ophthalmology
+
+All queries are implemented via the generic Repository and SQL combination.
+
+🧩 Design Highlights
+
+✔ Generic + base classes improve code reuse
+✔ Layered architecture inspired by enterprise frameworks
+✔ Dynamic SQL placeholders for multi-database support
+✔ Automatic audit field handling
+✔ Pagination and fuzzy search support
+✔ SQL debug logging for observability
